# C_Cpp-note

./: .gitignore  CMakeLists.txt  README.md  build1.sh
.cache/clangd/index/: Main.cpp.F3D093F44AEDFCFC.idx
Header Files/: Array.h  Log.h  Vector.h
src/: ENUMS.cpp  Lifetime.cpp  Log.cpp  Main.cpp  Player.cpp  Template.cpp  Vector.cpp  array.cpp  arrow.cpp  benchMark.cpp  constructor.cpp  copy.cpp  entity.cpp  fast_string.cpp  function_ptr.cpp  heap_stack.cpp  inherit.cpp  lvalue.cpp  math.cpp  multiD_array.cpp  multi_Threading.cpp  my_array.cpp  my_sort.cpp  my_vector.cpp  operator.cpp  optional.cpp  pointer.cpp  sort.cpp  std_array.cpp  struct_binding.cpp  thread.cpp  timing.cpp  track_memory.cpp  union.cpp  variant.cpp  virtualDestructor.cpp
